@@ -1,6 +1,8 @@
 RODOS 2.22 -
 - New: |RODOS.OFF,<option command> If a program needs all the memory and RODOS isn't giving it enough,
   then |RODOS.OFF will turn off the RODOS rom and reboot with RUN"DISC (or the command passed) on startup.
+- Fixed: |TITLE now produces a meaningful error message.
+  Previously it said "Bad file name", now it reports "Title too long". It also stores this as error 34
 - Fixed: |BGET randomly returned a number of 27 instead of the actual data. The CAS IN CHAR patch code
   was reverted to the v2.01 code at the end. See https://github.com/cormacj/rodos-disassembly/issues/1
 - Fixed: Limit the length of the |ROM and |ZAP startup string to 100 characters to avoid a buffer overflow.
